правки в таблице резюме

--- a/CompetentumWebApp/CompetentumWebApp.csproj
+++ b/CompetentumWebApp/CompetentumWebApp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
-  <Import Project="..\packages\Microsoft.Net.Compilers.2.2.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.2.0\build\Microsoft.Net.Compilers.props')" />
+  <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -76,25 +76,21 @@
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.4.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.AI.DependencyCollector, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ApplicationInsights.DependencyCollector.2.4.0\lib\net45\Microsoft.AI.DependencyCollector.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.AI.DependencyCollector, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.DependencyCollector.2.4.1\lib\net45\Microsoft.AI.DependencyCollector.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.AI.PerfCounterCollector, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ApplicationInsights.PerfCounterCollector.2.4.0\lib\net45\Microsoft.AI.PerfCounterCollector.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.AI.PerfCounterCollector, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.PerfCounterCollector.2.4.1\lib\net45\Microsoft.AI.PerfCounterCollector.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AI.ServerTelemetryChannel, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.2.4.0\lib\net45\Microsoft.AI.ServerTelemetryChannel.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.AI.Web, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ApplicationInsights.Web.2.4.0\lib\net45\Microsoft.AI.Web.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.AI.Web, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.Web.2.4.1\lib\net45\Microsoft.AI.Web.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.AI.WindowsServer, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ApplicationInsights.WindowsServer.2.4.0\lib\net45\Microsoft.AI.WindowsServer.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.AI.WindowsServer, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.WindowsServer.2.4.1\lib\net45\Microsoft.AI.WindowsServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ApplicationInsights, Version=2.4.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.2.4.0\lib\net45\Microsoft.ApplicationInsights.dll</HintPath>
@@ -106,7 +102,6 @@
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -248,10 +243,45 @@
     <Compile Include="Migrations\201707061421554_MigrateDB5.Designer.cs">
       <DependentUpon>201707061421554_MigrateDB5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707071018066_MigrateDB6.cs" />
+    <Compile Include="Migrations\201707071018066_MigrateDB6.Designer.cs">
+      <DependentUpon>201707071018066_MigrateDB6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707071043436_MigrateDB7.cs" />
+    <Compile Include="Migrations\201707071043436_MigrateDB7.Designer.cs">
+      <DependentUpon>201707071043436_MigrateDB7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707071259114_MigrateDB8.cs" />
+    <Compile Include="Migrations\201707071259114_MigrateDB8.Designer.cs">
+      <DependentUpon>201707071259114_MigrateDB8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707101028300_MigrateDB9.cs" />
+    <Compile Include="Migrations\201707101028300_MigrateDB9.Designer.cs">
+      <DependentUpon>201707101028300_MigrateDB9.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707101111587_MigrateDB10.cs" />
+    <Compile Include="Migrations\201707101111587_MigrateDB10.Designer.cs">
+      <DependentUpon>201707101111587_MigrateDB10.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707101115426_MigrateDB11.cs" />
+    <Compile Include="Migrations\201707101115426_MigrateDB11.Designer.cs">
+      <DependentUpon>201707101115426_MigrateDB11.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707101142202_MigrateDB12.cs" />
+    <Compile Include="Migrations\201707101142202_MigrateDB12.Designer.cs">
+      <DependentUpon>201707101142202_MigrateDB12.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Currency.cs" />
+    <Compile Include="Models\educationalLevel.cs" />
+    <Compile Include="Models\EmploymentName.cs" />
+    <Compile Include="Models\Gender.cs" />
+    <Compile Include="Models\language.cs" />
+    <Compile Include="Models\languageLevel.cs" />
     <Compile Include="Models\Resume.cs" />
     <Compile Include="Models\ResumeContext.cs" />
+    <Compile Include="Models\Schedule.cs" />
+    <Compile Include="Models\Source.cs" />
     <Compile Include="Models\State.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -854,7 +884,9 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -876,11 +908,13 @@
     <Content Include="Views\AdminLte\Colors.cshtml" />
     <Content Include="Views\AdminLte\_Index.cshtml" />
     <Content Include="Views\AdminLte\Index.cshtml" />
-    <Content Include="Views\AdminLte\Create.cshtml" />
-    <Content Include="Views\AdminLte\Edit.cshtml" />
+    <Content Include="Views\AdminLte\oldCreate.cshtml" />
+    <Content Include="Views\AdminLte\oldEdit.cshtml" />
     <Content Include="Views\AdminLte\Details.cshtml" />
     <Content Include="Views\AdminLte\ResumeView.cshtml" />
     <Content Include="Views\AdminLte\HeadHunter.cshtml" />
+    <Content Include="Views\AdminLte\Create.cshtml" />
+    <Content Include="Views\AdminLte\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707021633444_InitialCreate.resx">
@@ -900,6 +934,27 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707061421554_MigrateDB5.resx">
       <DependentUpon>201707061421554_MigrateDB5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071018066_MigrateDB6.resx">
+      <DependentUpon>201707071018066_MigrateDB6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071043436_MigrateDB7.resx">
+      <DependentUpon>201707071043436_MigrateDB7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071259114_MigrateDB8.resx">
+      <DependentUpon>201707071259114_MigrateDB8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101028300_MigrateDB9.resx">
+      <DependentUpon>201707101028300_MigrateDB9.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101111587_MigrateDB10.resx">
+      <DependentUpon>201707101111587_MigrateDB10.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101115426_MigrateDB11.resx">
+      <DependentUpon>201707101115426_MigrateDB11.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101142202_MigrateDB12.resx">
+      <DependentUpon>201707101142202_MigrateDB12.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -940,7 +995,7 @@
     <PropertyGroup>
       <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.2.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.2.0\build\Microsoft.Net.Compilers.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
