--- a/CompetentumWebApp/packages.config
+++ b/CompetentumWebApp/packages.config
@@ -2,14 +2,19 @@
 <packages>
   <package id="AdminLteMvc" version="1.0.0" targetFramework="net452" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="ClosedXML" version="0.91.0" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EPPlus" version="4.5.1" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
+  <package id="FastMember.Signed" version="1.1.0" targetFramework="net461" />
   <package id="Flurl" version="2.3.0" targetFramework="net461" />
   <package id="Flurl.Http" version="1.1.3" targetFramework="net461" />
   <package id="font-awesome" version="4.7.0" targetFramework="net452" />
-  <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
-  <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="JsonToSQL" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
@@ -18,27 +23,28 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net461" />
